--- a/ChatConsultantforAdmin/css/style.css
+++ b/ChatConsultantforAdmin/css/style.css
@@ -55,9 +55,8 @@
 .show-popup{
     opacity: 1;
 }
-.enter-button{
-    box-sizing: content-box;
-    width: 20%;
+.popup-button{
+    box-sizing: content-box;  
 	color: #000000;
 	padding: .5em;
 	border: 1px solid #A0A9B1;
@@ -65,8 +64,136 @@
 	background: #D8D5D5;
 	transition: 0.2s;
 } 
-.enter-button:hover{ 
+.popup-button:hover{ 
 	background-color: #AD9999;
     color: #ffffff;
     cursor: pointer;
+}
+
+.user-dialog-preview {    
+    box-sizing: border-box;
+    width: 100%;
+    height: 70px;
+    border-bottom: 1px solid #A0A9B1;
+    padding-top: 5px;
+    position: relative;
+    text-align: center;
+}
+ .user-dialog-preview:hover {
+    background: #f3e0e0;  
+    cursor: pointer;
+ }
+.circle-user-avatar {
+    width: 60px;
+	height: 60px;
+	background: #ffac00;
+	-moz-border-radius: 50px;
+	-webkit-border-radius: 50px;
+	border-radius: 50px;
+}
+.avatar-name {
+    font-size: 28px;
+    position: absolute;
+    margin-left: -3%;
+    margin-top: 14px;
+}
+.dialog-user-name { 
+    position: absolute;
+    top: 10%;
+    width: 100%;
+    left: 10px;
+    font-size: 16px;
+}
+.dialog-date {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    left: 68px;
+    font-size: 11px;
+    color: #A0A9B1;
+    text-align: left;
+}
+
+.chat-frame iframe{		
+	box-sizing: border-box;
+    border: 1px solid #A0A9B1;
+    position: absolute;
+    left: 20%;
+    top: 5px;
+    height: 800px;
+    width: 80%;
+}
+.chat-with-user {
+    opacity: 1;
+    position: absolute;
+    width: 100%;
+	height: 85%;
+    overflow-x: hidden;
+	overflow-y: auto;
+}
+.chat-input{
+	position: absolute;
+    left: 3%;
+	bottom: 5px;
+	border-radius: 3px;
+	width: 92%;
+	height: 10%;
+	border: 1px solid #A0A9B1;
+	margin: 4px;
+	resize: none;
+	font-family: 'Jura', sans-serif; 
+    opacity: 1;
+}
+.chat-window{
+	box-sizing: border-box;
+    border: 1px solid #A0A9B1;
+    position: absolute;
+    left: 20%;
+    top: 5px;
+    height: 800px;
+    width: 80%;
+}
+.user-message-cloud{	
+	box-sizing: border-box;
+	display: block;
+	word-wrap: break-word;
+	float: left;
+	margin: 10px;
+    padding: 0px 5px;
+	text-align: left;
+	font-family: 'Jura', sans-serif; 
+    background: #4DEFA9;
+	border: 1px solid #A0A9B1;
+	border-radius: 6px;
+}
+.admin-message-cloud{
+	box-sizing: border-box;
+	display: block;
+	word-wrap: break-word; 
+	float: right; 
+	margin: 10px;
+    padding: 5px 10px;
+	text-align: right; 
+	font-family: 'Jura', sans-serif;
+	background: #7397D4;
+	border: 1px solid #A0A9B1;
+	border-radius: 6px;
+}
+ul.clear{
+	list-style-type: none;
+	overflow: hidden;
+	margin-left: 0;
+	padding-left: 0;
+}
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+ 
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+}
+ 
+::-webkit-scrollbar-thumb {    
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
