correct data transfer to bd
+ full data transfer to bd from chatDirective
- iframe for chatDirective

--- a/ChatConsultantforAdmin/css/style.css
+++ b/ChatConsultantforAdmin/css/style.css
@@ -114,7 +114,7 @@
     text-align: left;
 }
 
-.chat-frame iframe{		
+.chat-frame{		
 	box-sizing: border-box;
     border: 1px solid #A0A9B1;
     position: absolute;
