--- a/ChatConsultantforAdmin/views/Clients/index.cshtml
+++ b/ChatConsultantforAdmin/views/Clients/index.cshtml
@@ -24,7 +24,7 @@
                 </th>
                 <th style="width: 80%;">
                     <div class="chat-frame">
-                        <iframe src="@Url.Action("DialogWindow", "Messages")"></iframe>
+                        <chat-directive></chat-directive>
                     </div>                    
                 </th>
             </tr>        
