--- a/ChatConsultantforAdmin/views/Clients/index.cshtml
+++ b/ChatConsultantforAdmin/views/Clients/index.cshtml
@@ -1,4 +1,4 @@
-﻿@model ChatConsultantforAdmin.models.CombiModel
+﻿@model IEnumerable<ChatConsultantforAdmin.models.Clients>
 @{
     Layout = null;
 }
@@ -16,32 +16,16 @@
         <table style="width: 100%;" ng-app="chatConsultantForAdmin">
             <tr style="width: 100%;">
                 <th style="width: 20%;">
-                    @{  
-                        foreach (var item in Model.client)
+                    @{  foreach (var item in Model)
                         {
                             <dialog-preview-directive user-name="@item.name" last-msg-d-t="@item.last_message"></dialog-preview-directive>
                         }
                     }              
                 </th>
                 <th style="width: 80%;">
-                    <div class="chat-window">
-                        <div id='chat2' class='chat-with-user'>
-                            <ul id='messages' class='clear'>
-                                @{
-                                    foreach (var item in Model.dialogMessage)
-                                    {
-                                        if (item.msgText != null)
-                                        {
-                                            <li class="admin-message-cloud">@item.msgText</li>
-                                            <br style="clear: both">
-                                            <br style="clear: both">
-                                        }
-                                    }
-                                }
-                            </ul>                            
-                        </div>   
-                        <chat-directive></chat-directive>  
-                    </div>               
+                    <div class="chat-frame">
+                        <chat-directive></chat-directive>
+                    </div>                    
                 </th>
             </tr>        
         </table>
