--- a/ChatConsultantforAdmin/css/style.css
+++ b/ChatConsultantforAdmin/css/style.css
@@ -124,6 +124,11 @@
     color: #A0A9B1;
 }
 
+.chat-hint{
+    position: absolute;
+    top: 15%;
+    left: 40%;
+}
 .chat-frame{		
 	box-sizing: border-box;
     border: 1px solid #A0A9B1;
@@ -131,7 +136,7 @@
     left: 20%;
     top: 5px;
     height: 800px;
-    width: 80%;
+    width: 80%;    
 }
 .chat-with-user {
     opacity: 1;
@@ -152,7 +157,7 @@
 	margin: 4px;
 	resize: none;
 	font-family: 'Jura', sans-serif; 
-    opacity: 1;
+    opacity: 0;
 }
 .chat-window{
 	box-sizing: border-box;
