--- a/ChatConsultantforAdmin/css/style.css
+++ b/ChatConsultantforAdmin/css/style.css
@@ -1,7 +1,8 @@
 ﻿.page-body{
 	position: absolute;
 	left: 10%;
-	width: 80%;
+    width: 80%;
+    top: 6%;
 }
 .message-field {
     resize: none;
@@ -135,7 +136,7 @@
     position: absolute;
     left: 20%;
     top: 5px;
-    height: 800px;
+    height: 750px;
     width: 80%;    
 }
 .chat-with-user {
@@ -213,4 +214,56 @@ ul.clear{
  
 ::-webkit-scrollbar-thumb {    
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+
+.header{
+    top: 0%;
+    left: 10%;
+    right: 10%;
+    position: fixed;
+    z-index: 2;
+    background: rgb(119, 209, 141);
+    height: 60px;
+    margin: 0px, 10px, 10px, 10px;
+}
+.header-title{
+    position: absolute;
+    left: 3%;
+    font-size: 26px;
+    font-style: italic;
+    font-weight: bolder;
+}
+.help-bar{
+    position: absolute;
+    top: 15px;
+    left: 70%;
+    list-style-type: none;
+    margin: 0;
+}
+.help-bar li{
+    display: inline;
+    margin-right: 10px;
+    font-size: 22px;
+}
+.circle-admin-avatar {
+    position: absolute;
+    top: 5px;
+    left: 94%;
+    width: 50px;
+	height: 50px;
+	background: #dcedf0;
+	-moz-border-radius: 40px;
+	-webkit-border-radius: 40px;
+    border-radius: 40px;    
+    transition-duration: 300ms;
+}
+.circle-admin-avatar:hover {
+    cursor: pointer;
+    background: #c6dce0;    
+}
+.admin-name {
+    font-size: 28px;
+    position: absolute;
+    margin-left: 32%;
+    margin-top: 20%;
 }
