--- a/ChatConsultantforAdmin/views/Clients/index.cshtml
+++ b/ChatConsultantforAdmin/views/Clients/index.cshtml
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="header">
-        <p class="header-title">ChatConsultant</p>
+        <p class="header-title" onclick="returnToDialogs()">ChatConsultant</p>
         <ul class="help-bar">
             <li><a>Помощь</a>
             <li><a>Информация</a>     
@@ -44,5 +44,9 @@
 <script>
     function editAdmin() {
         window.location.href = '/Admins/Edit';
+    }
+
+    function returnToDialogs() {
+        window.location.href = '/Clients/Index';
     }
 </script>
