--- a/ChatConsultantforAdmin/css/style.css
+++ b/ChatConsultantforAdmin/css/style.css
@@ -114,6 +114,16 @@
     color: #A0A9B1;
     text-align: left;
 }
+.dialog-header{
+    position: absolute;
+    box-sizing: border-box;
+    border-bottom: 1px solid #A0A9B1;
+    width: 100%;
+    height: 50px;
+    opacity: 0;
+    font-size: 20px;
+    padding: 15px;
+}
 .message-date {
 	display: block;
 	float: right; 
@@ -143,7 +153,8 @@
     opacity: 1;
     position: absolute;
     width: 100%;
-	height: 85%;
+    top: 7%;
+	height: 78%;
     overflow-x: hidden;
 	overflow-y: auto;
 }
@@ -198,6 +209,8 @@
 	border-radius: 6px;
 }
 ul.clear{
+    position: absolute;
+    width: 100%;
 	list-style-type: none;
 	overflow: hidden;
 	margin-left: 0;
