--- a/ChatConsultantforAdmin/css/style.css
+++ b/ChatConsultantforAdmin/css/style.css
@@ -30,16 +30,16 @@
 }
 .popup{
     width: 100%;
-    height: 2000px;    
+    height: 100%;    
     overflow: hidden;
     position: fixed;
     top: 0px;
 }
 .popup .popup-content{
     margin-left: 42%;
-    margin-top: 16%;
+    margin-top: 19%;
     width: 16%;
-    height: 10%;
+    height: auto;
     padding: 10px;
     background-color: #c5c5c5;
     border-radius: 5px;
