--- a/ChatConsultantforAdmin/css/style.css
+++ b/ChatConsultantforAdmin/css/style.css
@@ -77,6 +77,13 @@
     height: 710px;
     overflow: hidden;
 }
+.dialogs{
+    list-style-type: none;
+	overflow: hidden;
+	margin-left: 0;
+    padding-left: 0;
+    margin-top: -5px;
+}
 .dialog-column-scroll{
     width: 100%;
     height: 100%;
