fixes for persistense refresh clients dialogs

--- a/ChatConsultantforAdmin/views/Clients/index.cshtml
+++ b/ChatConsultantforAdmin/views/Clients/index.cshtml
@@ -25,13 +25,7 @@
             <tr style="width: 100%;">
                 <th class="dialog-column">
                     <div class="dialog-column-scroll">
-                        <ul id="list" class="dialogs">
-                        @{  foreach (var item in Model)
-                            {
-                                <li class='user-dialog-preview' id='preview' name='dialogPreview'><dialog-preview-directive user-name="@item.name" last-msg-d-t="@item.last_message" id="dlgPrv"></dialog-preview-directive></li>                                
-                            }
-                        }    
-                        </ul>
+                        <dialog-preview-directive></dialog-preview-directive>
                     </div>          
                 </th>
                 <th style="width: 80%;">
