--- a/ChatConsultantforAdmin/css/style.css
+++ b/ChatConsultantforAdmin/css/style.css
@@ -117,6 +117,20 @@
     background: #f3e0e0;  
     cursor: pointer;
  }
+ .news-user-dialog-preview{
+    box-sizing: border-box;
+    width: 100%;
+    height: 70px;
+    background: rgb(190, 223, 180);
+    border-bottom: 1px solid #A0A9B1;
+    padding-top: 5px;
+    position: relative;
+    text-align: center;
+}
+.news-user-dialog-preview:hover {
+    background: #f3e0e0;  
+    cursor: pointer;
+ }
 .circle-user-avatar {
     width: 60px;
 	height: 60px;
