--- a/ChatConsultantforAdmin/css/style.css
+++ b/ChatConsultantforAdmin/css/style.css
@@ -10,7 +10,7 @@
     width: 600px;
     height: 50px;
     max-height: 150px;
-    font-family: 'Jura', sans-serif; 
+    font-family: 'Tinos', serif;
 }
 .video-background{
     width: 100%;
@@ -178,7 +178,7 @@
 	margin: 10px;
     margin-top: 4px;
 	text-align: right; 
-	font-family: 'Jura', sans-serif;
+	font-family: 'Tinos', serif;
     font-size: 11px;
     color: #A0A9B1;
 }
@@ -188,7 +188,7 @@
 	margin: 10px;
     margin-top: 4px;
 	text-align: left; 
-	font-family: 'Jura', sans-serif;
+	font-family: 'Tinos', serif;
     font-size: 11px;
     color: #A0A9B1;
 }
@@ -226,7 +226,7 @@
 	border: 1px solid #A0A9B1;
 	margin: 4px;
 	resize: none;
-	font-family: 'Jura', sans-serif; 
+	font-family: 'Tinos', serif;
     opacity: 0;
 }
 .chat-window{
@@ -248,7 +248,7 @@
     margin-right: 100px;
     padding: 10px;
 	text-align: left;
-	font-family: 'Jura', sans-serif; 
+	font-family: 'Tinos', serif;
     background: #4DEFA9;
 	border: 1px solid #A0A9B1;
 	border-radius: 6px;
@@ -263,7 +263,7 @@
     margin-left: 100px;
     padding: 10px;
 	text-align: right; 
-	font-family: 'Jura', sans-serif;
+	font-family: 'Tinos', serif;
 	background: #7397D4;
 	border: 1px solid #A0A9B1;
 	border-radius: 6px;
