--- a/ChatConsultantforAdmin/css/style.css
+++ b/ChatConsultantforAdmin/css/style.css
@@ -131,6 +131,15 @@
     background: #f3e0e0;  
     cursor: pointer;
  }
+ .new-message-alert{
+    position: absolute;
+    top: 15%;
+    width: 100%;
+    left: 75%;
+    font-size: 11px;
+    font-style: italic;
+    text-align: left;
+ }
 .circle-user-avatar {
     width: 60px;
 	height: 60px;
@@ -142,7 +151,7 @@
 .avatar-name {
     font-size: 28px;
     position: absolute;
-    margin-left: -3%;
+    margin-left: -8px;
     margin-top: 14px;
 }
 .dialog-user-name { 
