--- a/ChatConsultantforAdmin/css/style.css
+++ b/ChatConsultantforAdmin/css/style.css
@@ -66,7 +66,10 @@
 	padding: .5em;
 	border: 1px solid #A0A9B1;
 	border-radius: 6px;
-	background: #D8D5D5;
+    background: #D8D5D5;
+    -webkit-transition: 0.2s;
+    -moz-transition: 0.2s;
+    -o-transition: 0.2s;
 	transition: 0.2s;
 } 
 .popup-button:hover{ 
@@ -76,17 +79,23 @@
 }
 
 .dialog-column{
-    display: block;
-    width: 100%;
-    height: 710px;
+    position: absolute;
+    width: 20%;
+    top: 9px;
+    height: 749px;
     overflow: hidden;
+    -webkit-transition: 1s;
+    -moz-transition: 1s;
+    -o-transition: 1s;
+    transition: 1s;
+    background-color: #fff;
 }
 .dialogs{
     list-style-type: none;
 	overflow: hidden;
 	margin-left: 0;
     padding-left: 0;
-    margin-top: -5px;
+    margin: auto;
 }
 .dialog-column-scroll{
     width: 100%;
@@ -184,6 +193,7 @@
     opacity: 0;
     font-size: 20px;
     padding: 15px;
+    color: #483f57;
 }
 .admin-message-date {
 	display: block;
@@ -209,16 +219,21 @@
 .chat-hint{
     position: absolute;
     top: 15%;
-    left: 40%;
+    left: 39%;
 }
 .chat-frame{		
-	box-sizing: border-box;
+    box-sizing: border-box;
+    background-color: #fff;
     border-left: 1px solid #A0A9B1;
     position: absolute;
     left: 20%;
     top: 5px;
-    height: 750px;
-    width: 80%;    
+    height: 755px;
+    width: 80%;   
+    -webkit-transition: 1s;
+    -moz-transition: 1s;
+    -o-transition: 1s;
+    transition: 1s;
 }
 .chat-with-user {
     opacity: 1;
@@ -307,38 +322,64 @@ ul.clear{
     width: 100%;
     position: fixed;
     z-index: 2;
-    background: linear-gradient(to bottom right, #444643, #4994a1);
+    background: #483f57;
     height: 60px;
 }
 .header-title{
+    position: absolute;
     width: 100px;
-    margin: auto;
+    left: 44%;
     margin-top: 15px;
     font-size: 26px;
-    font-style: italic;
-    color: #ee9817;
+    font-weight: bold;
+    color: #fff;
 }
 .header-title:hover{
+    cursor: pointer;
+}
+.header-dialogs{
+    position: absolute;
+    left: 15%;
+    margin-top: 20px;
+    font-size: 20px;
+    color: #fff;
+}
+.dialogs-arrow{
+    position: absolute;
+    left: 20%;
+    margin-top: 21px;
+    margin-left: 5px;
+    width: 24px;
+    height: 24px;
+    -webkit-transition: 1s;
+    -moz-transition: 1s;
+    -o-transition: 1s;
+    transition: 1s;
+}
+.dialogs-arrow:hover{
     cursor: pointer;
 }
 .admin-full-name{
     position: absolute;
     top: 20px;
-    left: 78%;
+    left: 80%;
     font-size: 20px;
-    color: #ee9817;
+    color: #fff;
 }
 .circle-admin-avatar {
     position: absolute;
     top: 5px;
-    left: 90%;
+    left: 91%;
     width: 50px;
 	height: 50px;
 	background: #dcedf0;
 	-moz-border-radius: 40px;
 	-webkit-border-radius: 40px;
     border-radius: 40px;    
-    transition-duration: 300ms;
+    -webkit-transition: 300ms;
+    -moz-transition: 300ms;
+    -o-transition: 300ms;
+    transition: 300ms;
 }
 .circle-admin-avatar:hover {
     cursor: pointer;
@@ -370,18 +411,21 @@ ul.clear{
     padding-bottom: 10px;
     font-size: 18px;
     transition-property: color;
-    transition-duration: 300ms;
+    -webkit-transition: 300ms;
+    -moz-transition: 300ms;
+    -o-transition: 300ms;
+    transition: 300ms;
 }
 .admin-menu li:hover{
     cursor: pointer;
-    color: #ad6d0c;
+    color: #7f63ac;
 }
 .admin-status{
     position: absolute;
     top: 7px;
     left: 95%;
     font-size: 20px;
-    color: #ee9817;
+    color: #fff;
 }
 .status-slider{
     height: 15px;
@@ -391,32 +435,23 @@ ul.clear{
 .status-slide:hover{
     cursor: pointer;
 }
-.slider-button-left{ 
+.slider-button{ 
     position: absolute; 
     top: 27px;
     width: 20px;
     height: 20px;
+    left: 7px;
     background: #fff;
     border: 1px solid #A0A9B1;
-    border-radius: 40px;    
+    border-radius: 40px; 
+    -webkit-transition: 600ms;
+    -moz-transition: 600ms;
+    -o-transition: 600ms;
+    transition: 600ms;
 }
-.slider-button-left:hover{
+.slider-button:hover{
     cursor: pointer;
-    background: #ee6464;
-}
-.slider-button-right{ 
-    position: absolute; 
-    top: 27px;
-    left: 30px;
-    width: 20px;
-    height: 20px;
-    background: #fff;
-    border: 1px solid #A0A9B1;
-    border-radius: 40px;    
-}
-.slider-button-right:hover{
-    cursor: pointer;
-    background: #64eeae;
+    background: #a0a4d8;
 }
 .slider-background{
     box-sizing: border-box;
